--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -9,7 +9,7 @@
 
     <include
 
-        android:id="@+id/about_toolbar"
+        android:id="@+id/activity_about_toolbar"
         layout="@layout/view_toolbar" />
 
     <ScrollView
@@ -28,14 +28,14 @@
 
             <android.support.v7.widget.CardView
 
-                android:id="@+id/about_top_card_view"
+                android:id="@+id/activity_about_top_card_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp">
 
                 <ListView
 
-                    android:id="@+id/about_top_list_view"
+                    android:id="@+id/activity_about_top_list_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
@@ -51,7 +51,7 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/about_top_card_view"
+                android:layout_below="@id/activity_about_top_card_view"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp">
 
