--- a/app/src/main/res/layout/activity_edit_day.xml
+++ b/app/src/main/res/layout/activity_edit_day.xml
@@ -9,7 +9,7 @@
 
     <include
 
-        android:id="@+id/edit_day_toolbar"
+        android:id="@+id/activity_edit_day_toolbar"
         layout="@layout/view_toolbar_padded" />
 
     <FrameLayout
@@ -39,7 +39,7 @@
 
                     <ListView
 
-                        android:id="@+id/edit_day_list_view"
+                        android:id="@+id/activity_edit_day_list_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
