--- a/app/src/main/res/layout/dialog_edit_day_add_class.xml
+++ b/app/src/main/res/layout/dialog_edit_day_add_class.xml
@@ -14,12 +14,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="23.75dp"
         android:layout_marginRight="24.5dp"
-        android:prompt="@string/spinner_prompt"
+        android:prompt="@string/spinner_prompt_class"
         android:scrollbars="none" />
 
     <TextView
 
-        android:id="@+id/dialog_edit_day_add_class_start_time_label"
+        android:id="@+id/dialog_edit_day_add_class_start_time_label_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/dialog_edit_day_add_class_spinner"
@@ -31,11 +31,11 @@
 
     <TextView
 
-        android:id="@+id/dialog_edit_day_add_class_start_time"
+        android:id="@+id/dialog_edit_day_add_class_start_time_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/dialog_edit_day_add_class_start_time_label"
+        android:layout_alignTop="@id/dialog_edit_day_add_class_start_time_label_text_view"
         android:layout_marginRight="29.75dp"
         android:gravity="right"
         android:textColor="#000000"
@@ -43,10 +43,10 @@
 
     <TextView
 
-        android:id="@+id/dialog_edit_day_add_class_end_time_label"
+        android:id="@+id/dialog_edit_day_add_class_end_time_label_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/dialog_edit_day_add_class_start_time_label"
+        android:layout_below="@id/dialog_edit_day_add_class_start_time_label_text_view"
         android:layout_marginTop="4dp"
         android:paddingLeft="23.75dp"
         android:text="End time:"
@@ -55,11 +55,11 @@
 
     <TextView
 
-        android:id="@+id/dialog_edit_day_add_class_end_time"
+        android:id="@+id/dialog_edit_day_add_class_end_time_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/dialog_edit_day_add_class_end_time_label"
+        android:layout_alignTop="@id/dialog_edit_day_add_class_end_time_label_text_view"
         android:layout_marginRight="29.75dp"
         android:gravity="right"
         android:textColor="#000000"
@@ -67,10 +67,10 @@
 
     <EditText
 
-        android:id="@+id/dialog_edit_day_add_class_location"
+        android:id="@+id/dialog_edit_day_add_class_location_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/dialog_edit_day_add_class_end_time_label"
+        android:layout_below="@id/dialog_edit_day_add_class_end_time_label_text_view"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="26dp"
         android:layout_marginTop="8dp"
@@ -81,10 +81,10 @@
 
     <EditText
 
-        android:id="@+id/dialog_edit_day_add_class_teacher"
+        android:id="@+id/dialog_edit_day_add_class_teacher_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/dialog_edit_day_add_class_location"
+        android:layout_below="@id/dialog_edit_day_add_class_location_edit_text"
         android:layout_marginBottom="4dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="26dp"
