--- a/app/src/main/res/layout/view_event_recycler_event.xml
+++ b/app/src/main/res/layout/view_event_recycler_event.xml
@@ -17,7 +17,8 @@
         <RelativeLayout
 
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:foreground="?attr/selectableItemBackground">
 
             <RelativeLayout
 
