--- a/app/src/main/res/xml/preferences_settings.xml
+++ b/app/src/main/res/xml/preferences_settings.xml
@@ -80,6 +80,7 @@
         <com.afollestad.materialdialogs.prefs.MaterialListPreference
 
             android:defaultValue="1"
+            android:dialogTitle="Choose first day of week"
             android:entries="@array/days_of_week"
             android:entryValues="@array/days_of_week_values"
             android:key="first_day_of_week"
@@ -90,15 +91,18 @@
         <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
 
             android:defaultValue="08:00"
+            android:dialogTitle="Enter first lesson time"
             android:hint="HH:mm"
             android:key="first_lesson_time"
             android:maxLines="1"
+            android:negativeButtonText=""
             android:summary="Enter when your day starts in the format HH:mm"
             android:title="First lesson time" />
 
         <EditTextPreference
 
             android:defaultValue="60"
+            android:dialogTitle="Enter lesson length"
             android:key="default_lesson_length"
             android:numeric="integer"
             android:summary="Choose how long a lesson is by default in minutes"
@@ -144,12 +148,23 @@
 
             android:defaultValue="60"
             android:dependency="next_class_notification"
+            android:dialogTitle="Choose notification timing"
             android:entries="@array/next_class_notification_minutes_text"
             android:entryValues="@array/next_class_notification_minutes_values"
             android:key="next_class_notification_minutes"
             android:negativeButtonText=""
             android:summary="Choose when a notification for the next class appears"
             android:title="Next class notification timing" />
+
+        <com.afollestad.materialdialogs.prefs.MaterialMultiSelectListPreference
+
+            android:dialogTitle="Choose reminder timings"
+            android:entries="@array/reminder_times_text"
+            android:entryValues="@array/reminder_times_values"
+            android:key="reminder_times"
+            android:negativeButtonText=""
+            android:summary="Choose when you get reminded about events"
+            android:title="Reminder timings" />
 
     </PreferenceCategory>
 
