--- a/app/src/main/res/layout/view_event_recycler_event.xml
+++ b/app/src/main/res/layout/view_event_recycler_event.xml
@@ -3,83 +3,76 @@
 <FrameLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/view_event_recycler_event_frame_layout"
     android:layout_width="match_parent"
     android:layout_height="72dp"
+    android:background="@color/white"
     android:elevation="2dp">
 
-    <FrameLayout
+    <RelativeLayout
 
-        android:id="@+id/view_event_recycler_event_frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:foreground="?attr/selectableItemBackground">
 
         <RelativeLayout
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:foreground="?attr/selectableItemBackground">
+            android:id="@+id/view_event_recycler_homework_color_indicator_relative_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16dp">
 
-            <RelativeLayout
+            <ImageView
 
-                android:id="@+id/view_event_recycler_homework_color_indicator_relative_layout"
+                android:id="@+id/view_event_recycler_event_color_indicator_image_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="16dp">
+                android:src="@drawable/color_indicator_homework" />
 
-                <ImageView
+            <TextView
 
-                    android:id="@+id/view_event_recycler_event_color_indicator_image_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/color_indicator_homework" />
-
-                <TextView
-
-                    android:id="@+id/view_event_recycler_event_type_indicator_text_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:textColor="#ffffff"
-                    android:textSize="20sp" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-
+                android:id="@+id/view_event_recycler_event_type_indicator_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignRight="@id/view_event_recycler_homework_color_indicator_relative_layout"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="16dp"
-                android:paddingRight="64dp">
-
-                <TextView
-
-                    android:id="@+id/view_event_recycler_event_name_text_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textColor="#000000"
-                    android:textSize="15sp" />
-
-                <TextView
-
-                    android:id="@+id/view_event_recycler_event_due_text_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/view_event_recycler_event_name_text_view"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textSize="14sp" />
-
-            </RelativeLayout>
+                android:layout_centerInParent="true"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
 
         </RelativeLayout>
 
-    </FrameLayout>
+        <RelativeLayout
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@id/view_event_recycler_homework_color_indicator_relative_layout"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:paddingRight="64dp">
+
+            <TextView
+
+                android:id="@+id/view_event_recycler_event_name_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="#000000"
+                android:textSize="15sp" />
+
+            <TextView
+
+                android:id="@+id/view_event_recycler_event_due_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/view_event_recycler_event_name_text_view"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textSize="14sp" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
 
 </FrameLayout>
